# pets

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: windows-release.yml
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/builtin/: pet.json
src-tauri/src/: lib.rs  main.rs
src/lib/: animation.ts  gaze.test.ts  gaze.ts  renderer.ts  sprite.test.ts  sprite.ts  types.ts
