[package]
name = "pet-desk"
version = "0.1.3"
description = "A lightweight extensible desktop pet"
edition = "2021"

[lib]
name = "pet_desk_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-dialog = "2.7"
tauri-plugin-opener = "2.5"
tauri-plugin-autostart = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
image = { version = "0.25", default-features = false, features = ["webp"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
