[package]
name = "pet-desk"
version = "0.1.8"
description = "A lightweight extensible desktop pet"
edition = "2021"

[lib]
name = "pet_desk_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-dialog = "2.7"
tauri-plugin-opener = "2.5"
tauri-plugin-autostart = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
image = { version = "0.25", default-features = false, features = ["webp"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
keyring = "4.1.5"
url = "2"
futures-util = "0.3"
reqwest = { version = "0.13.4", features = ["json", "stream"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
rdev = "0.5.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.25"
